<resources>
    <string name="app_name">闲城</string>
    <string name="lazy_shop_mall_travel">开启闲城之旅</string>
    <string name="please_select_age">选择年龄</string>
    <string name="please_select_out">请退出重新选择</string>
    <string name="next_page">下一页</string>
    <string name="up_slide">向上滑动</string>
    <string name="jump">跳过</string>
    <string name="lazy_shop_buy">闲城省心够</string>
    <string name="agree_shop">同意注册并遵守牙城《用户协议》</string>
    <string name="forget_pass">忘记密码</string>
    <string name="phone_register">手机注册</string>
    <string name="login">登录</string>
    <string name="please_input_password">请输入密码</string>
    <string name="pass_word">密码</string>
    <string name="pass_hint">用户名/邮箱/已验证手机</string>
    <string name="num_verify">账号</string>
    <string name="num_pass_login">账号密码登录</string>
    <string name="sms_login">短信验证登录</string>
    <string name="verify_success">验证成功</string>
    <string name="forget_has_verify_success">获取验证码成功</string>
    <string name="forget_verify_fail">验证失败</string>
    <string name="verify_callback_country">返回支持发送验证码的国家列表</string>
    <!--forget pass end-->
    <!--rating start-->
    <string name="verify_submit_success">提交验证码成功</string>
    <string name="little_notify_txt">为了更好的体验闲城精准推送和定制服务，我们建议您完成注册，完成需求定制，我们已为您准备了大红包</string>
    <string name="not_register">确定放弃</string>
    <string name="continue_register">返回注册</string>
    <string name="little_notify">小贴士提醒</string>
    <string name="test_old_price">¥129</string>
    <string name="new_price">¥199</string>
</resources>
