<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimen_10_dip"
        >
       <ImageView
           android:layout_width="30dp"
           android:layout_height="30dp"
           android:contentDescription="@null"
           android:src="@drawable/pg_little_notify"
           android:layout_toStartOf="@+id/little_notify_txt"
           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/little_notify"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:id="@id/little_notify_txt"
            android:gravity="center"
            />
    </RelativeLayout>
    <TextView
        android:layout_margin="@dimen/dimen_10_dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/little_notify_txt"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
     <Button
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/not_register"
         android:id="@+id/not_ok"
         android:background="@drawable/common_tab_bg"
         />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/continue_register"
            android:id="@+id/ok"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/common_tab_bg"
            />
    </LinearLayout>
</LinearLayout>