<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/welcome_back"
        android:scaleType="fitXY"
        android:contentDescription="@null"
        />
   <Button
       android:layout_width="wrap_content"
       android:layout_height="@dimen/dimen_35_dip"
       android:layout_gravity="end"
       android:layout_marginTop="@dimen/dimen_30_dip"
       android:layout_marginEnd="@dimen/dimen_10_dip"
       android:text="@string/jump"
       android:textSize="12sp"
       android:textColor="#FFF"
       android:background="@drawable/jump_next"
       />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        >
        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/next_page"
            android:textStyle="bold"
            android:textSize="18sp"
            android:id="@+id/first_btn"
            android:textColor="#FFF"
            android:background="@drawable/binding_selector"
            />
        <com.anshi.lazyshopmall.self_view.ArrowMoveView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/up_slide"
            android:textColor="#FFF"
            android:layout_marginTop="5dp"
            />
    </LinearLayout>
</FrameLayout>